# ueba-project

./: .envexample  .gitignore  README.md  alembic.ini  main.py  progress.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 60664971dd8c_recreate_alerts_table_with_all_columns.py  7ca50af4c163_add_severity_to_alerts_table.py  7e942145aaa2_add_anomalies_table.py  93311965e961_add_email_and_hashed_password_to_users.py  94b2bbc07a3b_add_alerts_and_risk_scores_tables.py  b77f6d415f12_recreate_clean_alerts_table.py  c0ae36a862fe_add_user_devices_and_baselines_tables.py  c498be91017e_fix_is_current_column_type_in_baselines.py  d138a2b0144d_add_checksum_index_to_raw_events.py  e46b0080278a_add_hashed_password_to_users.py  ef1d7e80fe42_create_users_and_events_tables.py
app/: main.py
app/api/v1/: alerts.py  auth.py  baseline.py  detection.py  ingest.py  router.py  users.py
app/core/: config.py  deps.py  security.py
app/db/: session.py
app/detection/rules/: base.py  data_volume.py  login_time.py  new_device.py
app/models/: __init__.py  alert.py  anomaly.py  baseline.py  device.py  event.py  risk_score.py  user.py
app/schemas/: event.py  user.py
app/scoring/: risk_scorer.py
app/services/: alert_engine.py  baseline.py  detection.py  ingestion.py  normalization.py
dashboard/: app.py
data/: generate_sample_data.py  load_sample_data.py
data/sample_logs/: anomalous_events.json  events.json  normal_events.json
